# WS_como-estruturar-projetos-e-processos-de-dados-do-zero

./: README.md  app.py  pyproject.toml
