[tool.poetry]
name = "ws-como-estruturar-projetos-e-processos-de-dados-do-zero"
version = "0.1.0"
description = ""
authors = ["Jonathan Moraes <112712315+jonathanmoraes91@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
